--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>postgresql</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>org.testcontainers</groupId>-->
 <!--			<artifactId>postgresql</artifactId>-->
