--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/estacionamento
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=admin
 spring.datasource.password=123
+
+#spring.security.user.password=Chaves12@
+#spring.security.user.name=user
+#spring.security.user.roles="USER"
